test/compile-fail/unbounded_3.lisp
; test unbounded
(add 1 2)
(defun add (x y) (+ x y))